fix: add overflow scroll property for main page

--- a/src/pages/MainPage/MainPage.scss
+++ b/src/pages/MainPage/MainPage.scss
@@ -7,4 +7,5 @@
   flex-wrap: wrap;
   gap:  10px;
   padding: 20px;
+  overflow-y: scroll;
 }
